Fixed popup font being too big?

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,11 +57,11 @@ h2 {
   display: none;
   width: 50vw;
   height: 50vh;
-  border: 0.5rem black solid;
+  border: 0.2rem black solid;
   align-content: center;
   text-align: center;
   background: white;
-  font-size: 3rem;
+  font-size: 1rem;
   padding: 2rem;
   overflow: hidden;
   animation-name: show-popup;
@@ -75,11 +75,10 @@ h2 {
   font-size: 1rem;
   font-weight: bold;
   color: white;
-  width: 3rem;
-  height: 3rem;
+  width: 2rem;
+  height: 2rem;
   position: absolute;
   top: 0;
   right: 0;
   cursor: pointer;
-  font-size: 2rem;
 }
